[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
proto = { path = "../proto" }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.10", features = ["transport"] }
clap = { version = "4", features = ["derive", "env"] }
tokio-stream = { version = "0.1", features = ["net"] }
common = { path = "../common" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
